--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 <h1>
 <a id="setup" class="anchor" href="#setup" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Setup</h1>
 
-<p>The setup is pretty simple:
-1. Run <em>make all</em>
-2. Read the docs for examples in <em>docs/_build/html/index.html</em></p>
-
-<h1>
+<p>The setup is pretty simple:<p>
+<ol>
+  <li>Run <b>make all</b></li>
+  <li>Read the docs for examples in <em>docs/_build/html/index.html</em></li>
+</ol>
+h1>
 <a id="code-layout" class="anchor" href="#code-layout" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Code Layout</h1>
 
 <p>This project uses the following structure:</p>
